--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,5 +1,10 @@
 version: 2
 
+python:
+  version: 3.9
+  install:
+   - requirements: docs/requirements.txt
+
 mkdocs:
   configuration: mkdocs.yml
   fail_on_warning: false
