--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,9 +7,12 @@ plugins:
 - search
 - mkdocstrings
 
+docs_dir: docs
+
 nav:
     - Home: 'index.md'
     - About: 'about.md'
     - Reference: 'reference.md'
     - Code of conduct: 'conduct.md'
     - Contributing: 'contributing.md'
+
