--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -34,7 +34,7 @@ jobs:
     - name: Test with pytest
       run: |
         pip install coverage
-        coverage run pytest
+        coverage run -m pytest
     - name: "Upload coverage to Codecov"
       uses: codecov/codecov-action@v2
       with:
