--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -20,6 +20,14 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: 3.9
+    - name: Install latex
+      if: ${{ startsWith(matrix.os, 'ubuntu') }}
+      run: |
+        sudo apt-get update
+        sudo apt-get install \
+          texlive-latex-base \
+          texlive-latex-extra \
+          texlive-pictures
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
