--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,7 +2,10 @@ site_name: liionpack
 
 theme:
     name: material
-
+    palette:
+      primary: blue grey
+    font:
+      text: Saira
 plugins:
 - search
 - mkdocstrings
@@ -15,4 +18,3 @@ nav:
     - Reference: 'reference.md'
     - Code of conduct: 'conduct.md'
     - Contributing: 'contributing.md'
-
