--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,17 +1,35 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: Python application
+name: liionpack
 
 on:
   push:
     branches: [ main ]
   pull_request:
     branches: [ main ]
+  schedule:
+    - cron:  '0 3 * * *'
 
 jobs:
-  build:
+  style:
+    runs-on: ubuntu-latest
+  
+    steps:
+    - uses: actions/checkout@v2
+    - name: Setup python
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.9
 
+    - name: Lint with flake8
+      run: |
+        python -m pip install flake8
+        flake8 --max-line-length=127
+
+
+  build:
+    needs: style
     runs-on: ubuntu-latest
 
     steps:
@@ -31,15 +49,8 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 pytest
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    - name: Lint with flake8
-      run: |
-        # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Generate Report
+        pip install -r requirements.txt
+    - name: Run tests and generate coverage report
       run: |
         pip install coverage
         coverage run -m unittest
