Run tests on all branches

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -5,9 +5,9 @@ name: liionpack
 
 on:
   push:
-    branches: [ main ]
+    branches:
   pull_request:
-    branches: [ main ]
+    branches:
   schedule:
     - cron:  '0 3 * * *'
 
