--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -24,6 +24,7 @@ jobs:
 
     - name: Lint with flake8
       run: |
+        python -m pip install --upgrade pip
         python -m pip install flake8
         flake8 --max-line-length=127
 
