--- a/.github/workflows/test_on_push.yml
+++ b/.github/workflows/test_on_push.yml
@@ -24,8 +24,9 @@ jobs:
 
     - name: Lint with flake8
       run: |
-        $CONDA/bin/conda install flake8
-        $CONDA/bin/flake8 --max-line-length=127
+        python -m pip install --upgrade pip
+        python -m pip install flake8
+        flake8 --max-line-length=89
 
 
   build:
@@ -38,9 +39,6 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: 3.9
-    - name: Install dependencies
-      run: |
-        $CONDA/bin/conda env update --file environment.yml --name base
     - name: Install latex
       run: |
         sudo apt-get update
@@ -49,9 +47,19 @@ jobs:
           texlive-latex-extra \
           texlive-pictures
         sudo apt-get install ghostscript
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
     - name: Run tests and generate coverage report
       run: |
-        $CONDA/bin/conda install coverage
-        $CONDA/bin/coverage run -m unittest
+        pip install coverage
+        coverage run -m unittest
+    - name: Install dependencies in conda environment
+      run: |
+        $CONDA/bin/conda env update --file environment.yml --name base
+    - name: Run tests in the conda environment
+      run: |
+        $CONDA/bin/conda -m unittest
     - name: Upload Coverage to Codecov
       uses: codecov/codecov-action@v1
