--- a/.github/workflows/test_on_push.yml
+++ b/.github/workflows/test_on_push.yml
@@ -51,15 +51,15 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-    - name: Run tests and generate coverage report
+    - name: Run tests 
       run: |
         pip install coverage
-        coverage run -m unittest
+        python -m unittest
     - name: Install dependencies in conda environment
       run: |
         $CONDA/bin/conda env update --file environment.yml --name base
-    - name: Run tests in the conda environment
+    - name: Run tests in the conda environment and generate coverage report
       run: |
-        $CONDA/bin/unittest
+        $CONDA/bin/coverage run -m unittest
     - name: Upload Coverage to Codecov
       uses: codecov/codecov-action@v1
