Try installing coverage in the conda environment

--- a/.github/workflows/test_on_push.yml
+++ b/.github/workflows/test_on_push.yml
@@ -53,13 +53,13 @@ jobs:
         pip install -r requirements.txt
     - name: Run tests 
       run: |
-        pip install coverage
         python -m unittest
     - name: Install dependencies in conda environment
       run: |
         $CONDA/bin/conda env update --file environment.yml --name base
     - name: Run tests in the conda environment and generate coverage report
       run: |
+        $CONDA/bin/conda install coverage
         $CONDA/bin/coverage run -m unittest
     - name: Upload Coverage to Codecov
       uses: codecov/codecov-action@v1
