Add Arithmatex in mkdocs

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -13,6 +13,13 @@ plugins:
 - search
 - mkdocstrings
 
+markdown_extensions:
+   - pymdownx.arithmatex
+
+extra_javascript:
+  - mathjax-config.js
+  - https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML
+
 docs_dir: docs
 
 nav:
