--- a/.github/workflows/test_on_push.yml
+++ b/.github/workflows/test_on_push.yml
@@ -26,7 +26,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install flake8
-        flake8 --max-line-length=89 --ignore W605, F403, F401, W503, E741, E203
+        flake8
 
 
   build:
