--- a/.github/workflows/test_on_push.yml
+++ b/.github/workflows/test_on_push.yml
@@ -67,5 +67,9 @@ jobs:
     - name: Run tests in the conda environment 
       run: |
         $CONDA/bin/python -m unittest -v
+    - name: Build docs
+      run: |
+        python -m pip install -r docs/requirements.txt
+        mkdocs build
     - name: Upload Coverage to Codecov
       uses: codecov/codecov-action@v1
