--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -31,13 +31,13 @@ nav:
     - Home: 'index.md'
     - About: 'about.md'
     - Examples: 
-        - 'examples\01 Getting Started.ipynb'
-        - 'examples\02 Using inputs.ipynb'
-        - 'examples\03 Experiments.ipynb'
-        - 'examples\04 Initial SoC.ipynb'
-        - 'examples\05 Drive cycles.ipynb'
-        - 'examples\06 Changing a model.ipynb'
-        - 'examples\07 Simulating a bespoke pack using an LTSpice netlist and custom heat transfer.ipynb'
+        - 'examples/01 Getting Started.ipynb'
+        - 'examples/02 Using inputs.ipynb'
+        - 'examples/03 Experiments.ipynb'
+        - 'examples/04 Initial SoC.ipynb'
+        - 'examples/05 Drive cycles.ipynb'
+        - 'examples/06 Changing a model.ipynb'
+        - 'examples/07 Simulating a bespoke pack using an LTSpice netlist and custom heat transfer.ipynb'
     - Reference: 'reference.md'
     - Code of conduct: 'conduct.md'
     - Contributing: 'contributing.md'
