--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -30,7 +30,8 @@ docs_dir: docs
 nav:
     - Home: 'index.md'
     - About: 'about.md'
-    - Examples: 
+    - Installation: 'install.md'
+    - Examples:
         - 'examples/01 Getting Started.ipynb'
         - 'examples/02 Using inputs.ipynb'
         - 'examples/03 Experiments.ipynb'
