--- a/.github/workflows/test_on_push.yml
+++ b/.github/workflows/test_on_push.yml
@@ -51,6 +51,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install -r requirements.txt
+        pybamm_install_jax
     - name: Install liionpack for ray
       run: |
         python setup.py install
