--- a/.github/workflows/test_on_push.yml
+++ b/.github/workflows/test_on_push.yml
@@ -49,6 +49,7 @@ jobs:
         sudo apt-get install ghostscript
     - name: Install dependencies
       run: |
+        pip install wheel
         python -m pip install --upgrade pip
         python -m pip install -r requirements.txt
         pybamm_install_jax
