--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 numpy
 scipy
 matplotlib
-pybamm
+pybamm>=22.5
 pandas
 plotly
 openpyxl
@@ -13,3 +13,4 @@ networkx
 textwrapper
 dask[complete]
 ray
+protobuf==3.20.*
