--- a/.github/workflows/test_on_push.yml
+++ b/.github/workflows/test_on_push.yml
@@ -49,17 +49,17 @@ jobs:
         sudo apt-get install ghostscript
     - name: Install specific version of PyBaMM and liionpack
       run: |
-        pip install wheel
+        python -m pip install wheel
         python -m pip install git+https://github.com/pybamm-team/PyBaMM@develop
     - name: Install dependencies
       run: |
-        pip install wheel
+        python -m pip install wheel
         python -m pip install --upgrade pip
         python -m pip install -r requirements.txt
         pybamm_install_jax
     - name: Install liionpack for ray
       run: |
-        python setup.py install
+        python -m pip install .
     - name: Run tests and generate coverage report
       run: |
         python -m pip install coverage
