this might work

--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -11,11 +11,16 @@ mkdocs:
   configuration: mkdocs.yml
   fail_on_warning: true
 
+
+build:
+  jobs:
+    post_create_environment:
+      - python -m pip install --no-cache-dir .[extras]
+
 # Optionally set the version of Python and requirements required to build your docs
 python:
    version: "3.8"
    install:
-   - requirements: requirements.txt
    - requirements: docs/requirements.txt
    - method: pip
      path: .
