--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -11,14 +11,5 @@ mkdocs:
   configuration: mkdocs.yml
   fail_on_warning: true
 
-# Optionally set the version of Python and requirements required to build your docs
-python:
-   version: "3.8"
-   install:
-   - requirements: requirements.txt
-   - requirements: docs/requirements.txt
-   - method: pip
-     path: .
-     extra_requirements:
-       - docs
-   
+conda:
+  environment: environment.yml
