add mkdocs requirements back in

--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -7,9 +7,18 @@ version: 2
 
 formats: all
 
+conda:
+  environment: environment.yml
+
+# Add the docs requirements required to build your docs
+python:
+   install:
+   - requirements: docs/requirements.txt
+   - method: pip
+     path: .
+     extra_requirements:
+       - docs
+ 
 mkdocs:
   configuration: mkdocs.yml
   fail_on_warning: true
-
-conda:
-  environment: environment.yml
