try putting docs deps in yml

--- a/environment.yml
+++ b/environment.yml
@@ -34,3 +34,6 @@ dependencies:
     - lcapy
     - scikit-spatial
     - ray
+    - mkdocstrings-python-legacy
+    - mkdocs-material
+    - mkdocs-jupyter
