try adding post_install job to install extra docs deps

--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -13,3 +13,8 @@ conda:
 mkdocs:
   configuration: mkdocs.yml
   fail_on_warning: false
+
+jobs:
+  post_install:
+    # install docs dependencies
+    - python -m pip install docs/requirements.txt
