--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -9,13 +9,8 @@ formats: all
 
 conda:
   environment: environment.yml
+  environment: environment.docs.yml
  
 mkdocs:
   configuration: mkdocs.yml
   fail_on_warning: false
-
-build:
-  jobs:
-    post_install:
-      # install docs dependencies
-      - python -m pip install docs/requirements.txt
