--- a/.github/workflows/test_on_push.yml
+++ b/.github/workflows/test_on_push.yml
@@ -35,7 +35,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Set up Python 3.9
+    - name: Set up Python 3.8
       uses: actions/setup-python@v4
       with:
         python-version: 3.8
@@ -47,15 +47,16 @@ jobs:
           texlive-latex-extra \
           texlive-pictures
         sudo apt-get install ghostscript
-    - name: Install liionpack
+    - name: DEBUG
+      run: python abc.py
+    - name: Install liionpack and dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install wheel
+        python -m pip install wheel coverage
         python -m pip install .
         pybamm_install_jax
     - name: Run tests and generate coverage report
       run: |
-        python -m pip install coverage
         coverage run -m unittest -v
     - name: Build docs
       run: |
