--- a/.github/workflows/test_on_push.yml
+++ b/.github/workflows/test_on_push.yml
@@ -5,9 +5,9 @@ name: liionpack
 
 on:
   push:
-    branches:
+    branches: ["main", "develop"]
   pull_request:
-    branches:
+    branches: ["main", "develop"]
   schedule:
     - cron:  '0 3 * * *'
 
@@ -39,6 +39,7 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version: 3.8
+
     - name: Install latex
       run: |
         sudo apt-get update
@@ -47,20 +48,40 @@ jobs:
           texlive-latex-extra \
           texlive-pictures
         sudo apt-get install ghostscript
-    - name: DEBUG
-      run: python abc.py
+
     - name: Install liionpack and dependencies
       run: |
         python -m pip install --upgrade pip
         python -m pip install wheel coverage
         python -m pip install .
         pybamm_install_jax
-    - name: Run tests and generate coverage report
+
+    - name: Run tests on main on a push or on schedule
+      if: ${{ github.event == 'push' }} || ${{ github.event == 'schedule' }} && ${{ github.head_ref == 'main' }}
+      run: coverage run -m unittest -v
+
+    - name: Run tests on develop on a push or on schedule
+      if: ${{ github.event == 'push' }} || ${{ github.event == 'schedule' }} && ${{ github.head_ref == 'develop' }}
       run: |
+        python -m pip install git+https://github.com/pybamm-team/PyBaMM@develop --no-cache --force-reinstall
+        pybamm_install_jax
         coverage run -m unittest -v
+
+    - name: Run tests for pull requests made to main
+      if: ${{ github.event != 'schedule' }} && ${{ github.event != 'push' }} && ${{ github.event == 'pull_request' }} && ${{ github.event.pull_request.base.ref == 'main' }}
+      run: coverage run -m unittest -v
+
+    - name: Run tests for pull requests made to develop
+      if: ${{ github.event != 'schedule' }} && ${{ github.event != 'push' }} && ${{ github.event == 'pull_request' }} && ${{ github.event.pull_request.base.ref == 'develop' }}
+      run: |
+        python -m pip install git+https://github.com/pybamm-team/PyBaMM@develop --no-cache --force-reinstall
+        pybamm_install_jax
+        coverage run -m unittest -v
+
     - name: Build docs
       run: |
         python -m pip install -r docs/requirements.txt
         mkdocs build
+
     - name: Upload Coverage to Codecov
       uses: codecov/codecov-action@v1
