--- a/.github/workflows/test_on_push.yml
+++ b/.github/workflows/test_on_push.yml
@@ -57,22 +57,25 @@ jobs:
         pybamm_install_jax
 
     - name: Run tests on main on a push or on schedule
-      if: ${{ github.event == 'push' }} || ${{ github.event == 'schedule' }} && ${{ github.head_ref == 'main' }}
-      run: coverage run -m unittest -v
+      if: ${{ github.event_name == 'push' }} || ${{ github.event_name == 'schedule' }} && ${{ github.event_name != 'pull_request' }} && ${{ github.head_ref == 'main' }}
+      run: |
+        echo ${{ github.head_ref }}
+        coverage run -m unittest -v
 
     - name: Run tests on develop on a push or on schedule
-      if: ${{ github.event == 'push' }} || ${{ github.event == 'schedule' }} && ${{ github.head_ref == 'develop' }}
+      if: ${{ github.event_name == 'push' }} || ${{ github.event_name == 'schedule' }} && ${{ github.event_name != 'pull_request' }} && ${{ github.head_ref == 'develop' }}
       run: |
+        echo ${{ github.head_ref }}
         python -m pip install git+https://github.com/pybamm-team/PyBaMM@develop --no-cache --force-reinstall
         pybamm_install_jax
         coverage run -m unittest -v
 
     - name: Run tests for pull requests made to main
-      if: ${{ github.event != 'schedule' }} && ${{ github.event != 'push' }} && ${{ github.event == 'pull_request' }} && ${{ github.event.pull_request.base.ref == 'main' }}
+      if: ${{ github.event_name != 'schedule' }} && ${{ github.event_name != 'push' }} && ${{ github.event_name == 'pull_request' }} && ${{ github.event.pull_request.base.ref == 'main' }}
       run: coverage run -m unittest -v
 
     - name: Run tests for pull requests made to develop
-      if: ${{ github.event != 'schedule' }} && ${{ github.event != 'push' }} && ${{ github.event == 'pull_request' }} && ${{ github.event.pull_request.base.ref == 'develop' }}
+      if: ${{ github.event_name != 'schedule' }} && ${{ github.event_name != 'push' }} && ${{ github.event_name == 'pull_request' }} && ${{ github.event.pull_request.base.ref == 'develop' }}
       run: |
         python -m pip install git+https://github.com/pybamm-team/PyBaMM@develop --no-cache --force-reinstall
         pybamm_install_jax
