--- a/.github/workflows/test_on_push.yml
+++ b/.github/workflows/test_on_push.yml
@@ -11,6 +11,12 @@ on:
   schedule:
     - cron:  '0 3 * * *'
 
+concurrency:
+  # Skip intermediate builds: always.
+  # Cancel intermediate builds: always.
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   style:
     runs-on: ubuntu-latest
@@ -28,8 +34,7 @@ jobs:
         python -m pip install flake8
         flake8
 
-
-  build:
+  pip-build:
     needs: style
     runs-on: ubuntu-latest
 
@@ -59,15 +64,11 @@ jobs:
     - name: Run tests on main on a push or on schedule
       if: (github.event_name == 'push' || github.event_name == 'schedule' && github.event_name != 'pull_request') && github.ref_name == 'main'
       run: |
-        echo ${{ github.ref_name }}
-        echo ${{ github.event_name }}
-        echo ${{ (github.event_name == 'push' || github.event_name == 'schedule' && github.event_name != 'pull_request') && github.ref_name == 'main' }}
         coverage run -m unittest -v
 
     - name: Run tests on develop on a push or on schedule
       if: (github.event_name == 'push' || github.event_name == 'schedule' && github.event_name != 'pull_request') && github.ref_name == 'develop'
       run: |
-        echo ${{github.ref_name}}
         python -m pip install git+https://github.com/pybamm-team/PyBaMM@develop --no-cache --force-reinstall
         pybamm_install_jax
         coverage run -m unittest -v
