--- a/.github/workflows/run_benchmarks_over_history.yml
+++ b/.github/workflows/run_benchmarks_over_history.yml
@@ -29,12 +29,13 @@ jobs:
           python-version: 3.8
       - name: Install tox and asv
         run: pip install -U pip tox asv
-      - name: Fetch main branch
+      - name: Fetch develop branch
         # Not required when worklow trigerred
-        # on main, but useful when
+        # on develop, but useful when
         # experimenting/developing on another branch.
+        if: github.ref != 'refs/heads/develop'
         run: |
-          git fetch origin main:main
+          git fetch origin develop:develop
       - name: Run benchmarks
         run: |
           asv machine --machine "GitHubRunner"
