develop as the default branch

--- a/.github/workflows/test_on_push.yml
+++ b/.github/workflows/test_on_push.yml
@@ -5,7 +5,7 @@ name: liionpack
 
 on:
   push:
-    branches: ["main"]
+    branches: ["develop"]
   pull_request:
   schedule:
     - cron:  '0 3 * * *'
