--- a/.github/workflows/test_on_push.yml
+++ b/.github/workflows/test_on_push.yml
@@ -28,11 +28,10 @@ jobs:
       with:
         python-version: 3.8
 
-    - name: Lint with flake8
+    - name: Lint with ruff
       run: |
-        python -m pip install --upgrade pip
-        python -m pip install flake8
-        flake8
+        python -m pip install --upgrade pip pre-commit
+        pre-commit run ruff
 
   pip-build:
     needs: style
