--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,13 +3,8 @@ ci:
   autofix_commit_msg: "style: pre-commit fixes"
 
 repos:
-  - repo: https://github.com/psf/black
-    rev: 23.3.0
-    hooks:
-      - id: black
-
   - repo: https://github.com/astral-sh/ruff-pre-commit
     rev: "v0.0.276"
     hooks:
       - id: ruff
-        args: [--ignore=E741, --exclude=__init__.py]
+        args: [--fix, --ignore=E741, --exclude=__init__.py]
