--- a/.github/workflows/test_on_push.yml
+++ b/.github/workflows/test_on_push.yml
@@ -22,6 +22,8 @@ jobs:
   
     steps:
     - uses: actions/checkout@v3
+      with:
+          fetch-depth: 0
     - name: Setup python
       uses: actions/setup-python@v4
       with:
@@ -42,6 +44,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+      with:
+          fetch-depth: 0
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v4
       with:
