pin pybamm to 23.9

--- a/environment.yml
+++ b/environment.yml
@@ -29,7 +29,7 @@ dependencies:
   - sympy
   - pip
   - pip:
-    - pybamm>=23.5
+    - pybamm==23.9
     - ipdb
     - ruff
     - mkdocstrings-python-legacy
