--- a/.github/workflows/test_on_push.yml
+++ b/.github/workflows/test_on_push.yml
@@ -19,20 +19,12 @@ concurrency:
 jobs:
   style:
     runs-on: ubuntu-latest
-  
     steps:
-    - uses: actions/checkout@v3
-      with:
-          fetch-depth: 0
-    - name: Setup python
-      uses: actions/setup-python@v4
-      with:
-        python-version: 3.12
-
-    - name: Lint with ruff
-      run: |
-        python -m pip install --upgrade pip pre-commit
-        pre-commit run --all
+      - uses: actions/checkout@v4
+        with:
+          submodules: 'true'
+      - uses: actions/setup-python@v4
+      - uses: pre-commit/action@v3.0.0
 
   pip-build:
     needs: style
@@ -75,6 +67,7 @@ jobs:
         mkdocs build
 
     - name: Upload coverage reports to Codecov
+      if: matrix.os == 'ubuntu-latest' && matrix.python-version == '3.12'
       uses: codecov/codecov-action@v4.0.1
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
