--- a/.github/workflows/test_on_push.yml
+++ b/.github/workflows/test_on_push.yml
@@ -55,6 +55,12 @@ jobs:
       run: |
         coverage run -m unittest -v
 
+    - name: Run notebooks
+      run: |
+        pip install pytest nbmake
+        shopt -s globstar
+        pytest --nbmake docs/examples/*.ipynb
+
     - name: Build docs
       run: |
         python -m pip install -r docs/requirements.txt
